# soroka

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
.devcontainer/: devcontainer.json
examples/: CMakeLists.txt  main.cpp
include/soroka/: Soroka.h
include/soroka/Plugin/: RuntimeFunctions.hpp  Utils.hpp
include/soroka/Runtime/: ModuleRegistry.h
lib/: CMakeLists.txt
lib/Plugin/: CMakeLists.txt  EmbedIR.cpp  RuntimeFunctions.cpp  Utils.cpp  Utils.hpp
lib/Runtime/: CMakeLists.txt  ModuleRegistry.cpp
lib/plugin/: CMakeLists.txt  EmbedIR.cpp  print_functions.cpp
lib/runtime/: CMakeLists.txt
soroka/: CMakeLists.txt
